--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
+    "@vueuse/core": "^9.5.0",
+    "element-plus": "^2.2.21",
+    "normalize": "^0.3.1",
+    "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.0.23",
+    "pinia-plugin-persist": "^1.0.0",
+    "pinia-plugin-persistedstate": "^2.4.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@types/node": "^18.7.17",
     "@vitejs/plugin-vue": "^3.1.0",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
-    "vue-tsc": "^0.40.4"
+    "vue-tsc": "^0.40.4",
+    "webpack": "^5.75.0"
   }
 }
